syntax = "proto3";
package mmp.im.common.protocol;

option java_outer_classname = "MessageTypeD";

message MessageLite {

    string from = 1;
    string to = 2;

    Type type = 3;

    string data = 4;


    enum Type {

        READ_MESSAGE = 0;
        INPUT_NOW_MESSAGE = 1;

    }


}
